# fastapi-beanie-template

./: .env  README.md  pyproject.toml
server/: jwt.py  main.py
server/models/: auth.py
server/routes/: auth.py  mail.py  register.py  user.py
server/util/: current_user.py  password.py
tests/: conftest.py  data.py  util.py
